--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+li{
+    cursor: pointer;
+    font-weight: bold;
+    padding: 1rem;
+    border-radius: 2px;
+}
+
+li:hover {
+    background-color: black;
+}
+
+
+
+
+
+
