--- a/src/index.css
+++ b/src/index.css
@@ -2,51 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-li{
+.services li{
     cursor: pointer;
     font-weight: bold;
     padding: 1rem;
     border-radius: 2px;
 }
 
-li:hover {
+.services li:hover {
     background-color: black;
 }
 
+.training li{
+  cursor: pointer;
+  font-weight: bold;
+  padding: 1rem;
+  border-radius: 2px;
+}
 
-
-
-
-
-.button-explore {
-    display: flex;
-    align-items: center;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 17px;
-    padding: 0.8em 1.3em 0.8em 0.9em;
-    color: white;
-    background: #960000;
-    background: #960000;
-    border: none;
-    letter-spacing: 0.05em;
-    border-radius: 16px;
-  }
-  
-  .button-explore svg {
-    margin-right: 3px;
-    transform: rotate(30deg);
-    transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
-  }
-  
-  .button-explore span {
-    transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
-  }
-  
-  .button-explore:hover svg {
-    transform: translateX(5px) rotate(90deg);
-  }
-  
-  .button-explore:hover span {
-    transform: translateX(7px);
-  }
+.training li:hover {
+  background-color: black;
+}
