--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .first-group {
     opacity: 0;
     transition: opacity 0.5s
@@ -7,7 +8,6 @@
     opacity: 1;
     transition-delay: 0.3s;
   }
-
 
 
   .second-group {
@@ -83,4 +83,41 @@
   
   .third-group:nth-child(3) {
     transition-delay: 0.6s;
+  }
+
+
+  .fourth-group {
+    opacity: 0;
+    transform: translateY(-100px);
+    transition: opacity 0.5s, transform 0.5s;
+  }
+  
+  .fourth-group.show {
+    opacity: 1;
+    transform: translateY(0);
+    transform: translateX(-25px);
+  }
+  
+  .fourth-group:nth-child(1) {
+    transition-delay: 0.2s;
+  }
+  
+  .fourth-group:nth-child(2) {
+    transition-delay: 0.4s;
+  }
+  
+  .fourth-group:nth-child(3) {
+    transition-delay: 0.6s;
+  }
+  .fourth-group:nth-child(4) {
+    transition-delay: 0.8s;
+  }
+  
+  .fourth-group:nth-child(5) {
+    transition-delay: 1.0s;
+  }
+
+  .heading{
+    font-family: 'Exo 2', sans-serif;
+
   }
